# ApiProjects

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml
api/: __init__.py  __main__.py
api/assets/: area_and_prices.csv
api/assets/templates/: index.html
api/assets/templates/static/: style.css
api/routes/: areanprices.py  encyclopedia.py  identifier.py  login.py  production.py  weather.py
api/setup/: __init__.py  logger.py  session.py
api/utils/: __init__.py  database.py  models.py  postgres.py
